# TEMPUS-complete-test

./: Dockerfile  docker-compose.yml
src/back-end/: Dockerfile.backend  main.py  pyproject.toml  requirements.txt
src/back-end/alembic/: env.py
src/back-end/alembic/versions/: 23fa79cea744_alterações_no_model_de_ordem_serviço_.py  91e6977edec9_alterações_no_model_de_item_servico_.py  fccdc13837fa_reset_banco_de_dados.py
src/back-end/app/core/: database.py  dependencies.py  security.py
src/back-end/app/modules/auth/: auth_router.py  auth_service.py
src/back-end/app/modules/categoria/: categoria_model.py  categoria_repository.py  categoria_router.py  categoria_schema.py  categoria_service.py
src/back-end/app/modules/cliente/: cliente_model.py  cliente_repository.py  cliente_router.py  cliente_schema.py  cliente_service.py
src/back-end/app/modules/funcionario/: funcionario_especialidade.py  funcionario_model.py  funcionario_repository.py  funcionario_router.py  funcionario_schema.py  funcionario_service.py
src/back-end/app/modules/item_servico/: item_servico_model.py  item_servico_repository.py  item_servico_router.py  item_servico_schema.py  item_servico_service.py
src/back-end/app/modules/ordem_servico/: ordem_servico_model.py  ordem_servico_repository.py  ordem_servico_router.py  ordem_servico_schema.py  ordem_servico_service.py
src/back-end/app/modules/servico/: servico_model.py  servico_repository.py  servico_router.py  servico_schema.py  servico_service.py
src/back-end/app/modules/utils/: app_exception.py  (+2 more)
src/back-end/app/routers/: api_router.py
(+27 files in other folders)
